@@ -207,11 +207,13 @@ class Panel(GLIScreen.GLIScreen):
 
 		# Currently loaded modules
 		loaded_mod_frame = gtk.Frame(label="Loaded modules")
-		module_list_box = gtk.VBox(False, 6)
-		loaded_mod_frame.add(module_list_box)
+		module_list_box = gtk.VBox(False, 3)
+		module_scroll = gtk.ScrolledWindow()
+		module_scroll.add_with_viewport(module_list_box)
+		loaded_mod_frame.add(module_scroll)
 		loaded_modules = GLIUtility.spawn(r"lsmod | grep -v ^Module | cut -d ' ' -f 1", return_output=True)[1].strip().split("\n")
 		for module in loaded_modules:
-			module_list_box.pack_start(gtk.Label(module), expand=False, fill=False, padding=0)
+			module_list_box.pack_start(gtk.Label("   " + module + "   "), expand=False, fill=False, padding=0)
 		hbox.pack_end(loaded_mod_frame, expand=False, fill=False, padding=5)
 
 		advbox.pack_start(hbox, expand=False, fill=False, padding=0)
